Add download xlsx, but it not works

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "@aws/dynamodb-data-mapper": "^0.7.3",
     "aws-sdk": "^2.1092.0",
-    "uuid": "^8.3.2"
+    "json2csv": "^5.0.7",
+    "pdfkit": "^0.13.0",
+    "serverless-apigw-binary": "^0.4.4",
+    "uuid": "^8.3.2",
+    "xlsx": "^0.18.3"
   }
 }
