Improve code organization and add tests

--- a/serverless.yml
+++ b/serverless.yml
@@ -2,6 +2,10 @@ service: test
 
 frameworkVersion: '3'
 
+plugins:
+ - serverless-offline
+ - serverless-dynamodb-local
+
 provider:
   name: aws
   runtime: nodejs12.x
