--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +18,12 @@
     "serverless-apigw-binary": "^0.4.4",
     "uuid": "^8.3.2",
     "xlsx": "^0.18.3"
+  },
+  "devDependencies": {
+    "axios": "^0.26.1",
+    "jest": "^27.5.1",
+    "serverless-dynamodb-client": "^0.0.2",
+    "serverless-dynamodb-local": "^0.2.40",
+    "serverless-offline": "^8.5.0"
   }
 }
